@@ -242,4 +242,6 @@ Revision	Version Updated		Log Message
 221		C++			Add minorities to provinces with recent conversion and assimilation events.
 222		C++			Improve determinism and reliability of army support pop selection.
 223		C++			Fix Dyola culture mapping.
-224		C++			Avoid creating noculture/noreligion minority pops
+224		???
+225		C++			Avoid creating noculture/noreligion minority pops
+226		C++			Assign regiments to minority soldier pops that are already large enough before growing majority soldier pops.
